; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/hello_jpeg/extr_jpeg.c_decodeImage.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/hello_jpeg/extr_jpeg.c_decodeImage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64, %struct.TYPE_10__*, %struct.TYPE_9__*, i32*, %struct.TYPE_12__** }
%struct.TYPE_10__ = type { i32, i32, i32 }
%struct.TYPE_9__ = type { i32, i32, i32 }
%struct.TYPE_12__ = type { i64, i64, i64, i64, i32 }

@bufferIndex = common dso_local global i64 0, align 8
@OMX_BUFFERFLAG_EOS = common dso_local global i64 0, align 8
@OMX_ErrorNone = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Empty input buffer\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"return code %x\0A\00", align 1
@OMXJPEG_ERROR_MEMORY = common dso_local global i32 0, align 4
@OMX_EventPortSettingsChanged = common dso_local global i32 0, align 4
@OMXJPEG_OK = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [22 x i8] c"Filling output buffer\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"Error code %x\0A\00", align 1
@OMX_EventBufferFlag = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [34 x i8] c"No EOS event on image decoder %d\0A\00", align 1
@.str.5 = private unnamed_addr constant [34 x i8] c"No EOS event on image resizer %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @decodeImage(%struct.TYPE_11__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_11__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_12__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %15 = load i8*, i8** %6, align 8
  store i8* %15, i8** %8, align 8
  store i64 0, i64* %9, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %9, align 8
  %18 = add i64 %17, %16
  store i64 %18, i64* %9, align 8
  store i32 0, i32* %10, align 4
  store i64 0, i64* @bufferIndex, align 8
  br label %19

19:                                               ; preds = %204, %3
  %20 = load i64, i64* %9, align 8
  %21 = icmp ugt i64 %20, 0
  br i1 %21, label %22, label %205

22:                                               ; preds = %19
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %23, i32 0, i32 4
  %25 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %24, align 8
  %26 = load i64, i64* @bufferIndex, align 8
  %27 = getelementptr inbounds %struct.TYPE_12__*, %struct.TYPE_12__** %25, i64 %26
  %28 = load %struct.TYPE_12__*, %struct.TYPE_12__** %27, align 8
  store %struct.TYPE_12__* %28, %struct.TYPE_12__** %11, align 8
  %29 = load i64, i64* @bufferIndex, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* @bufferIndex, align 8
  %31 = load i64, i64* @bufferIndex, align 8
  %32 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = icmp uge i64 %31, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %22
  store i64 0, i64* @bufferIndex, align 8
  br label %37

37:                                               ; preds = %36, %22
  %38 = load i64, i64* %9, align 8
  %39 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %40 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = icmp ugt i64 %38, %41
  br i1 %42, label %43, label %49

43:                                               ; preds = %37
  %44 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %45 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %48 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %47, i32 0, i32 1
  store i64 %46, i64* %48, align 8
  br label %53

49:                                               ; preds = %37
  %50 = load i64, i64* %9, align 8
  %51 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %52 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %51, i32 0, i32 1
  store i64 %50, i64* %52, align 8
  br label %53

53:                                               ; preds = %49, %43
  %54 = load i64, i64* %9, align 8
  %55 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %56 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %55, i32 0, i32 1
  %57 = load i64, i64* %56, align 8
  %58 = sub i64 %54, %57
  store i64 %58, i64* %9, align 8
  %59 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %60 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %59, i32 0, i32 4
  %61 = load i32, i32* %60, align 8
  %62 = load i8*, i8** %8, align 8
  %63 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %64 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %63, i32 0, i32 1
  %65 = load i64, i64* %64, align 8
  %66 = call i32 @memcpy(i32 %61, i8* %62, i64 %65)
  %67 = load i8*, i8** %8, align 8
  %68 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %69 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %68, i32 0, i32 1
  %70 = load i64, i64* %69, align 8
  %71 = getelementptr inbounds i8, i8* %67, i64 %70
  store i8* %71, i8** %8, align 8
  %72 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %73 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %72, i32 0, i32 3
  store i64 0, i64* %73, align 8
  %74 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %75 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %74, i32 0, i32 2
  store i64 0, i64* %75, align 8
  %76 = load i64, i64* %9, align 8
  %77 = icmp ule i64 %76, 0
  br i1 %77, label %78, label %82

78:                                               ; preds = %53
  %79 = load i64, i64* @OMX_BUFFERFLAG_EOS, align 8
  %80 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %81 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %80, i32 0, i32 2
  store i64 %79, i64* %81, align 8
  br label %82

82:                                               ; preds = %78, %53
  %83 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %84 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %83, i32 0, i32 2
  %85 = load %struct.TYPE_9__*, %struct.TYPE_9__** %84, align 8
  %86 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %85, i32 0, i32 2
  %87 = load i32, i32* %86, align 4
  %88 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %89 = call i32 @OMX_EmptyThisBuffer(i32 %87, %struct.TYPE_12__* %88)
  store i32 %89, i32* %12, align 4
  %90 = load i32, i32* %12, align 4
  %91 = load i32, i32* @OMX_ErrorNone, align 4
  %92 = icmp ne i32 %90, %91
  br i1 %92, label %93, label %99

93:                                               ; preds = %82
  %94 = call i32 @perror(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %95 = load i32, i32* @stderr, align 4
  %96 = load i32, i32* %12, align 4
  %97 = call i32 @fprintf(i32 %95, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %96)
  %98 = load i32, i32* @OMXJPEG_ERROR_MEMORY, align 4
  store i32 %98, i32* %4, align 4
  br label %247

99:                                               ; preds = %82
  store i32 0, i32* %13, align 4
  br label %100

100:                                              ; preds = %175, %99
  %101 = load i32, i32* %13, align 4
  %102 = icmp eq i32 %101, 0
  br i1 %102, label %103, label %108

103:                                              ; preds = %100
  %104 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %105 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %104, i32 0, i32 3
  %106 = load i32*, i32** %105, align 8
  %107 = icmp eq i32* %106, null
  br label %108

108:                                              ; preds = %103, %100
  %109 = phi i1 [ false, %100 ], [ %107, %103 ]
  br i1 %109, label %110, label %176

110:                                              ; preds = %108
  %111 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %112 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %111, i32 0, i32 3
  %113 = load i32*, i32** %112, align 8
  %114 = icmp eq i32* %113, null
  br i1 %114, label %115, label %140

115:                                              ; preds = %110
  %116 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %117 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %116, i32 0, i32 2
  %118 = load %struct.TYPE_9__*, %struct.TYPE_9__** %117, align 8
  %119 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %118, i32 0, i32 1
  %120 = load i32, i32* %119, align 4
  %121 = load i32, i32* @OMX_EventPortSettingsChanged, align 4
  %122 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %123 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %122, i32 0, i32 2
  %124 = load %struct.TYPE_9__*, %struct.TYPE_9__** %123, align 8
  %125 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %124, i32 0, i32 0
  %126 = load i32, i32* %125, align 4
  %127 = call i32 @ilclient_wait_for_event(i32 %120, i32 %121, i32 %126, i32 0, i64 0, i32 1, i32 0, i32 5)
  store i32 %127, i32* %12, align 4
  %128 = load i32, i32* %12, align 4
  %129 = icmp eq i32 %128, 0
  br i1 %129, label %130, label %139

130:                                              ; preds = %115
  %131 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %132 = call i32 @portSettingsChanged(%struct.TYPE_11__* %131)
  store i32 %132, i32* %12, align 4
  %133 = load i32, i32* %12, align 4
  %134 = load i32, i32* @OMXJPEG_OK, align 4
  %135 = icmp ne i32 %133, %134
  br i1 %135, label %136, label %138

136:                                              ; preds = %130
  %137 = load i32, i32* %12, align 4
  store i32 %137, i32* %4, align 4
  br label %247

138:                                              ; preds = %130
  br label %139

139:                                              ; preds = %138, %115
  br label %159

140:                                              ; preds = %110
  %141 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %142 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %141, i32 0, i32 2
  %143 = load %struct.TYPE_9__*, %struct.TYPE_9__** %142, align 8
  %144 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %143, i32 0, i32 1
  %145 = load i32, i32* %144, align 4
  %146 = load i32, i32* @OMX_EventPortSettingsChanged, align 4
  %147 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %148 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %147, i32 0, i32 2
  %149 = load %struct.TYPE_9__*, %struct.TYPE_9__** %148, align 8
  %150 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %149, i32 0, i32 0
  %151 = load i32, i32* %150, align 4
  %152 = call i32 @ilclient_remove_event(i32 %145, i32 %146, i32 %151, i32 0, i32 0, i32 1)
  store i32 %152, i32* %12, align 4
  %153 = load i32, i32* %12, align 4
  %154 = icmp eq i32 %153, 0
  br i1 %154, label %155, label %158

155:                                              ; preds = %140
  %156 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %157 = call i32 @portSettingsChangedAgain(%struct.TYPE_11__* %156)
  br label %158

158:                                              ; preds = %155, %140
  br label %159

159:                                              ; preds = %158, %139
  %160 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %161 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %160, i32 0, i32 1
  %162 = load i64, i64* %161, align 8
  %163 = icmp eq i64 %162, 0
  br i1 %163, label %164, label %165

164:                                              ; preds = %159
  store i32 1, i32* %13, align 4
  br label %165

165:                                              ; preds = %164, %159
  %166 = load i32, i32* %13, align 4
  %167 = icmp eq i32 %166, 0
  br i1 %167, label %173, label %168

168:                                              ; preds = %165
  %169 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %170 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %169, i32 0, i32 3
  %171 = load i32*, i32** %170, align 8
  %172 = icmp eq i32* %171, null
  br i1 %172, label %173, label %175

173:                                              ; preds = %168, %165
  %174 = call i32 @sleep(i32 1)
  br label %175

175:                                              ; preds = %173, %168
  br label %100

176:                                              ; preds = %108
  %177 = load i32, i32* %10, align 4
  %178 = icmp eq i32 %177, 0
  br i1 %178, label %179, label %204

179:                                              ; preds = %176
  %180 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %181 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %180, i32 0, i32 3
  %182 = load i32*, i32** %181, align 8
  %183 = icmp ne i32* %182, null
  br i1 %183, label %184, label %204

184:                                              ; preds = %179
  %185 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %186 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %185, i32 0, i32 1
  %187 = load %struct.TYPE_10__*, %struct.TYPE_10__** %186, align 8
  %188 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %187, i32 0, i32 2
  %189 = load i32, i32* %188, align 4
  %190 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %191 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %190, i32 0, i32 3
  %192 = load i32*, i32** %191, align 8
  %193 = call i32 @OMX_FillThisBuffer(i32 %189, i32* %192)
  store i32 %193, i32* %12, align 4
  %194 = load i32, i32* %12, align 4
  %195 = load i32, i32* @OMX_ErrorNone, align 4
  %196 = icmp ne i32 %194, %195
  br i1 %196, label %197, label %203

197:                                              ; preds = %184
  %198 = call i32 @perror(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  %199 = load i32, i32* @stderr, align 4
  %200 = load i32, i32* %12, align 4
  %201 = call i32 @fprintf(i32 %199, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i32 %200)
  %202 = load i32, i32* @OMXJPEG_ERROR_MEMORY, align 4
  store i32 %202, i32* %4, align 4
  br label %247

203:                                              ; preds = %184
  store i32 1, i32* %10, align 4
  br label %204

204:                                              ; preds = %203, %179, %176
  br label %19

205:                                              ; preds = %19
  %206 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %207 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %206, i32 0, i32 2
  %208 = load %struct.TYPE_9__*, %struct.TYPE_9__** %207, align 8
  %209 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %208, i32 0, i32 1
  %210 = load i32, i32* %209, align 4
  %211 = load i32, i32* @OMX_EventBufferFlag, align 4
  %212 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %213 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %212, i32 0, i32 2
  %214 = load %struct.TYPE_9__*, %struct.TYPE_9__** %213, align 8
  %215 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %214, i32 0, i32 0
  %216 = load i32, i32* %215, align 4
  %217 = load i64, i64* @OMX_BUFFERFLAG_EOS, align 8
  %218 = call i32 @ilclient_wait_for_event(i32 %210, i32 %211, i32 %216, i32 1, i64 %217, i32 1, i32 0, i32 2)
  store i32 %218, i32* %14, align 4
  %219 = load i32, i32* %14, align 4
  %220 = icmp ne i32 %219, 0
  br i1 %220, label %221, label %225

221:                                              ; preds = %205
  %222 = load i32, i32* @stderr, align 4
  %223 = load i32, i32* %14, align 4
  %224 = call i32 @fprintf(i32 %222, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.4, i64 0, i64 0), i32 %223)
  br label %225

225:                                              ; preds = %221, %205
  %226 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %227 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %226, i32 0, i32 1
  %228 = load %struct.TYPE_10__*, %struct.TYPE_10__** %227, align 8
  %229 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %228, i32 0, i32 1
  %230 = load i32, i32* %229, align 4
  %231 = load i32, i32* @OMX_EventBufferFlag, align 4
  %232 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %233 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %232, i32 0, i32 1
  %234 = load %struct.TYPE_10__*, %struct.TYPE_10__** %233, align 8
  %235 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %234, i32 0, i32 0
  %236 = load i32, i32* %235, align 4
  %237 = load i64, i64* @OMX_BUFFERFLAG_EOS, align 8
  %238 = call i32 @ilclient_wait_for_event(i32 %230, i32 %231, i32 %236, i32 1, i64 %237, i32 1, i32 0, i32 2)
  store i32 %238, i32* %14, align 4
  %239 = load i32, i32* %14, align 4
  %240 = icmp ne i32 %239, 0
  br i1 %240, label %241, label %245

241:                                              ; preds = %225
  %242 = load i32, i32* @stderr, align 4
  %243 = load i32, i32* %14, align 4
  %244 = call i32 @fprintf(i32 %242, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.5, i64 0, i64 0), i32 %243)
  br label %245

245:                                              ; preds = %241, %225
  %246 = load i32, i32* @OMXJPEG_OK, align 4
  store i32 %246, i32* %4, align 4
  br label %247

247:                                              ; preds = %245, %197, %136, %93
  %248 = load i32, i32* %4, align 4
  ret i32 %248
}

declare dso_local i32 @memcpy(i32, i8*, i64) #1

declare dso_local i32 @OMX_EmptyThisBuffer(i32, %struct.TYPE_12__*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @ilclient_wait_for_event(i32, i32, i32, i32, i64, i32, i32, i32) #1

declare dso_local i32 @portSettingsChanged(%struct.TYPE_11__*) #1

declare dso_local i32 @ilclient_remove_event(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @portSettingsChangedAgain(%struct.TYPE_11__*) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @OMX_FillThisBuffer(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
